--- a/footer.html
+++ b/footer.html
@@ -25,5 +25,5 @@
 </script>
 <!-- End Piwik Code -->
 <!-- Piwik Image Tracker -->
-<noscript><img src="http://stats.pompage.net/piwik.php?idsite=1&amp;rec=1" style="border:0" alt="" /></noscript>
+<noscript><div><img src="http://stats.pompage.net/piwik.php?idsite=1&amp;rec=1" style="border:0" alt="" /></div></noscript>
 <!-- End Piwik -->
