--- a/rss-0.91.html
+++ b/rss-0.91.html
@@ -29,7 +29,7 @@
 				</item>
 			</BOUCLE_breves>
 			<item>
-				<title>[(#TITRE|texte_backend)]</title>
+				<title>[(#TITRE|texte_backend)][&nbsp;: (#SOUSTITRE|texte_backend)]</title>
 				<link>[(#URL_ARTICLE|url_absolue)]</link>
 				<pubDate>[(#DATE|affdate{"r"})]</pubDate>
 				<description>[(#INTRODUCTION|texte_backend)]</description>
