--- a/atom-1.00.html
+++ b/atom-1.00.html
@@ -3,7 +3,7 @@
 <feed xmlns="http://www.w3.org/2005/Atom" xml:lang="#LANG">
   <link rel="alternate" type="text/html" href="#URL_SITE_SPIP/"[ title="(#NOM_SITE_SPIP|texte_backend)"] />
   <link rel="self" type="application/atom+xml" href="#URL_SITE_SPIP/#SELF" />
-  
+
   [<title>(#NOM_SITE_SPIP|texte_backend)</title>]
   [<id>(#URL_SITE_SPIP)/</id>]
   [<subtitle>(#DESCRIPTIF_SITE_SPIP|texte_backend)</subtitle>]
@@ -12,7 +12,7 @@
   </author>
   <rights>Copyright 2001-[(#DATE|annee)]</rights>
   <logo>http://www.pompage.net/IMG/gif/p02.gif</logo>
-  
+
   <updated><BOUCLE_date_du_dernier_article(ARTICLES){par date}{inverse}{0,1}{id_rubrique=1}>[(#DATE|date_iso|trim{Z})+02:00]</BOUCLE_date_du_dernier_article></updated>
   <generator uri="http://www.spip.net/" version="#SPIP_VERSION">SPIP #SPIP_VERSION</generator>
 
@@ -36,7 +36,7 @@
 			</entry>
 		</BOUCLE_breves>
 		<entry>
-			<title type="html">[(#TITRE|texte_backend)]</title>
+			<title type="html">[(#TITRE|texte_backend)][&nbsp;: (#SOUSTITRE|texte_backend)]</title>
 			<link rel="alternate" type="text/html" href="[(#URL_ARTICLE|url_absolue)]" />
 			<id>tag:www.pompage.net,[(#DATE|annee)]:article-#ID_ARTICLE</id>
 			<published>[(#DATE|date_iso|trim{Z})+02:00]</published>
