Filtre pour appliquer un copyright en fonction de l’URL de l’article original ajouté

--- a/article.html
+++ b/article.html
@@ -58,6 +58,10 @@
         </div>]
 
         #NOTES
+
+        [<hr />
+
+        (#URL_ORIG|copyright)]
       </div><!-- #article -->
 
       <div id="fiche">
